# checkdef-demo

./: README.md  flake.nix  flake.nix.backup  pyproject.toml  result
.github/workflows/: cache-observation.yml  ci.yml
src/bar/: __init__.py  main.py
src/foo/: __init__.py  main.py
tests/: test_bar.py  test_foo.py
